[tool.poetry]
name = "enmech"
version = "0.1.1"
description = "An mechanic that manages images and instances of Google Compute Engine."
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"


[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"


[tool.poetry.scripts]
enmech = "enmech.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
